# load_calculator

./: .gitignore  README.html  README.md  app.py  gunicorn.conf.py  main.py  pyproject.toml
src/: app.py  container.py  container_selector.py  corner_space_iterator.py  image_3d_creator.py  item_fabric.py  load_item_fabric.py  loadable_item.py  loadable_item_fabric.py  loader.py  packer.py  pallet.py  point.py  shipment.py  space_iterator.py  testing_constants.py
src/api/: constants.py  request_data.py  request_parser.py  response_builder.py
src/container/: container.py
src/dev/: constants.py  image_3d_creator.py  main.py  testing_constants.py
src/items/: color_item.py  color_volume_item.py  container.py  item.py  item_fabric.py  lifting_item.py  pallet.py  point.py  shipment.py  volume_item.py  weight_item.py
src/iterator/: corner_space_iterator.py  pallet_space_iterator.py  space_iterator.py
src/iterators/: area_iterator.py  corner_free_space_iterator.py  corner_free_space_max_height_iterator.py  corner_ground_free_space_iterator.py  corner_ground_iterator.py  corner_height_free_space_iterator.py  corner_space_iterator.py  corner_space_max_height_iterator.py  corner_surface_iterator.py  horizontal_points_iterator.py  loadable_points_iterator.py  points_iterator.py  space_iterator.py  vertical_points_iterator.py
src/loading/: container_selection_type.py  container_selector.py  coordinate.py  direction.py  extension.py  loadable_points_manager.py  loader.py  loader_factory.py  loading_type.py  point.py  (+3 more)
tests/: caseOne.ods  test_loadable_points_manager.py
(+45 files in other folders)
