[tool.poetry]
name = "load-calculator"
version = "0.1.0"
description = ""
authors = ["Artem Vopilov <mister.0025@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
tqdm = "^4.65.0"
gunicorn = "^20.1.0"
openpyxl = "^3.1.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
